[gd_scene load_steps=7 format=3 uid="uid://cw0ho7y6y75fw"]

[ext_resource type="LabelSettings" uid="uid://w4y3mo2ralqf" path="res://assets/lg_48_grey.tres" id="1_5opdc"]
[ext_resource type="Script" path="res://scenes/game_ui/game_ui.gd" id="1_g17p1"]
[ext_resource type="LabelSettings" uid="uid://clbooe8loqsh" path="res://assets/lg_96_bl.tres" id="2_a8rnv"]
[ext_resource type="FontFile" uid="uid://b8jh7vdt5ycpu" path="res://assets/fonts/LuckiestGuy-Regular.ttf" id="3_b7ike"]
[ext_resource type="AudioStream" uid="uid://bvdn16wbovogo" path="res://assets/audio/jazzyfrenchy.mp3" id="5_q4unx"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_1bxcd"]

[node name="GameUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_g17p1")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 24

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="LevelLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Level 10"
label_settings = ExtResource("1_5opdc")

[node name="ScoreLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Attempts 30"
label_settings = ExtResource("1_5opdc")

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="GoLabel" type="Label" parent="MarginContainer/VBoxContainer2"]
layout_mode = 2
text = "Level Complete"
label_settings = ExtResource("2_a8rnv")

[node name="Continue" type="Label" parent="MarginContainer/VBoxContainer2"]
layout_mode = 2
theme_override_colors/font_color = Color(0.0117647, 0, 0.321569, 1)
theme_override_colors/font_outline_color = Color(0.152941, 1, 1, 1)
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("3_b7ike")
theme_override_font_sizes/font_size = 64
theme_override_styles/normal = SubResource("StyleBoxEmpty_1bxcd")
text = "Press To Continue"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_q4unx")
